--- a/style.css
+++ b/style.css
@@ -83,3 +83,22 @@ a, button {
     margin: 0 auto;
     padding-bottom: 16px;
 }
+.cards {
+    display: flex;
+    justify-items: space-between;
+}
+.card {
+    width: 48%;
+    margin: 16px;
+    border: 1px solid #e3e3e3;
+    border-radius: 4px;
+    padding-bottom: 16px;
+}
+.card .card-image img {
+    width: 100%;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+}
+.card .card-text, .card a {
+    padding: 16px;
+}
